--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "homepage": "https://github.com/bandless55/homeserver",
   "devDependencies": {
     "jshint": "^2.6.0"
+  },
+  "dependencies": {
+    "express": "^4.11.1"
   }
 }
