--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   },
   "dependencies": {
     "express": "^4.11.1",
-    "express-handlebars": "^1.1.0"
+    "express-handlebars": "^1.1.0",
     "bluebird": "~2.9.3"
   }
 }
