--- a/config.json
+++ b/config.json
@@ -2,5 +2,12 @@
 	"developer": true,
 	"modules": {
 		"thermostat": null
-	}
+	},
+    "database": {
+        "host"     : "localhost",
+        "port"     : "3306",
+        "user"     : "user",
+        "password" : "password",
+        "database" : "ehidb"
+    }
 }
