--- a/config.json
+++ b/config.json
@@ -2,5 +2,12 @@
 	"developer": true,
 	"modules": {
 		"thermostat": null
-	}
+	},
+    "database": {
+        "host"     : "192.168.1.84",
+        "port"     : "8086",
+        "user"     : "root",
+        "password" : "root",
+        "database" : "testDB"
+    }
 }
