--- a/config.json
+++ b/config.json
@@ -3,11 +3,11 @@
 	"modules": {
 		"thermostat": null
 	},
-    "database": {
-        "host"     : "192.168.1.84",
-        "port"     : "8086",
-        "user"     : "root",
-        "password" : "root",
-        "database" : "testDB"
-    }
+	"database": {
+		"host"     : "192.168.152.200",
+		"port"     : "8086",
+		"user"     : "root",
+		"password" : "root",
+		"database" : "ehidb"
+	}
 }
