--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "bluebird": "~2.9.3",
+    "body-parser": "^1.11.0",
     "express": "^4.11.1",
     "express-handlebars": "^1.1.0",
     "influx": "^3.2.0",
